syntax = "proto3";
option csharp_namespace = "nadena.dev.ndmf.proto";

package nadena.dev.ndmf.proto;

import "proto/objects.proto";
import "proto/base_types.proto";

message AvatarDescriptor {
  Vector eye_position = 1;
  optional VisemeConfig viseme_config = 2;
  optional EyelookConfig eyelook_config = 3;
}

message EyelookConfig {
  optional ObjectID left_eye_transform = 1;
  optional ObjectID right_eye_transform = 2;

  optional Vector look_forward = 3;
  optional Vector look_up = 4;
  optional Vector look_right = 5;
  optional Vector look_left = 6;
  optional Vector look_down = 7;
  
  oneof eyelid_config {
    BlendshapeEyelidConfig blendshape = 100;
    BoneEyelidConfig bone = 101;
  }
}

message BlendshapeEyelidConfig {
  ObjectID eyelid_mesh = 1;
  
  optional string blink = 2;
  optional string look_up = 3;
  optional string look_down = 4;
}

message BoneEyelidConfig {
  ObjectID upper_left_eyelid = 1;
  ObjectID lower_left_eyelid = 2;
  ObjectID upper_right_eyelid = 3;
  ObjectID lower_right_eyelid = 4;
  
  LRVector default_state = 5;
  LRVector look_up = 6;
  LRVector look_down = 7;
  LRVector closed_state = 8;
}

message LRVector {
  Vector left = 1;
  Vector right = 2;
}

message VisemeConfig {
  ObjectID viseme_mesh = 1;
  
  optional string viseme_sil = 2;
  optional string viseme_PP = 3;
  optional string viseme_FF = 4;
  optional string viseme_TH = 5;
  optional string viseme_DD = 6;
  optional string viseme_kk = 7;
  optional string viseme_CH = 8;
  optional string viseme_SS = 9;
  optional string viseme_nn = 10;
  optional string viseme_RR = 11;
  optional string viseme_aa = 12;
  optional string viseme_E = 13;
  optional string viseme_ih = 14;
  optional string viseme_oh = 15;
  optional string viseme_ou = 16;
}